--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
-
+body{
+    font-family: 'Inter', sans-serif;
+}
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  height: 30px;
+  margin-right: 7px;
+}
+nav{
+    background-color: #21222a;
+    padding: 30px  20px;
+    height: 90px;
+    align-content: center;
+    display: flex;
+}
+nav >h3, nav>h4{
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav >h3{
+ margin-right: auto;
+ color: #61DAFB;
+ font-size: 22px;
+ font-weight: 700;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav>h4{
+  color: #DEEBF8;
+  font-weight: 600;
 }
