--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 }
 body{
     font-family: 'Inter', sans-serif;
+    background-color: #282d35;
+;
 }
 .App-logo {
   height: 30px;
@@ -28,4 +30,26 @@ nav >h3{
 nav>h4{
   color: #DEEBF8;
   font-weight: 600;
+}
+main{
+  padding: 57px 27px;
+  color: white;
+  
+}
+.main-title{
+  margin: 0;
+  font-size: 39px;
+  letter-spacing: -0.05px;
+}
+.main-facts{
+  margin-top: 46px;
+  max-width: 400px;
+}
+.main-facts >li{
+  line-height: 19px;
+  padding-block:10px;
+}
+.main-facts > li::marker{
+  font-size: 1.4em;
+  color: #61DAFB;
 }
